hphp/test/zend/bad/ext/soap/tests/schema/schema009.php
<?php
include "test_schema.inc";
$schema = <<<EOF
	<simpleType name="testType">
		<list itemType="token"/>
	</simpleType>
EOF;
test_schema($schema,'type="tns:testType"',"one two");
echo "ok";
?>